--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,13 @@
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
-    <string name="login_success">"登入成功 !"</string>
+    <string name="login_success">"Login Success !"</string>
+    <string name="update_success">"Update Success !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="news_failed">"News API failed"</string>
+    <string name="update_failed">"Update failed"</string>
     <string name="time_zone">Time Zone</string>
     <string name="user_time_zone">User Time Zone : </string>
     <string name="change_time_zone">submit</string>
